--- a/source/_themes/sphinx_italia_theme/comments_disqus.html
+++ b/source/_themes/sphinx_italia_theme/comments_disqus.html
@@ -12,11 +12,11 @@ this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your pag
 */
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-s.src = 'https://f-o-i-a-comune-di-gioia-del-colle.disqus.com/embed.js';
+s.src = 'https://de-co.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-<script id="dsq-count-scr" src="//f-o-i-a-comune-di-gioia-del-colle.disqus.com/count.js" async></script>                          
+<script id="dsq-count-scr" src="//de-co.disqus.com/count.js" async></script>
